--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Document</title>
+    <title>Quiz App</title>
   </head>
   <body>
     <header>
-      <h1>Quiz-App</h1>
+      <h1>QUIZ APP</h1>
     </header>
   </body>
 </html>
