add question__card structure

--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Document</title>
+    <title>Quiz App</title>
   </head>
   <body>
     <header>
-      <h1>Quiz-App</h1>
+      <h1>QUIZ APP</h1>
     </header>
+    <main class="question__card">
+      <button class="bookmark">bookmark</button>
+      <section class="question">
+        <h2>Question</h2>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere
+          mollitia nulla in? Numquam totam doloremque similique eligendi nam a
+          magnam officiis illum sint. Omnis, ullam aspernatur odit quas quae
+          facere.
+        </p>
+      </section>
+      <button class="show__answer">Show Answer</button>
+    </main>
   </body>
 </html>
