add more styling and positioning to question__card

--- a/index.html
+++ b/index.html
@@ -10,18 +10,35 @@
     <header>
       <h1>QUIZ APP</h1>
     </header>
-    <main class="question__card">
-      <button class="bookmark">bookmark</button>
-      <section class="question">
-        <h2>Question</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere
-          mollitia nulla in? Numquam totam doloremque similique eligendi nam a
-          magnam officiis illum sint. Omnis, ullam aspernatur odit quas quae
-          facere.
-        </p>
-      </section>
-      <button class="show__answer">Show Answer</button>
+    <main>
+      <div class="question__card">
+        <button class="bookmark">bookmark</button>
+        <section class="question">
+          <h2>What's the question?</h2>
+        </section>
+        <button class="show__answer">show Answer</button>
+      </div>
+      <div class="question__card">
+        <button class="bookmark">bookmark</button>
+        <section class="question">
+          <h2>What's the question?</h2>
+        </section>
+        <button class="show__answer">show Answer</button>
+      </div>
+      <div class="question__card">
+        <button class="bookmark">bookmark</button>
+        <section class="question">
+          <h2>What's the question?</h2>
+        </section>
+        <button class="show__answer">show Answer</button>
+      </div>
+      <div class="question__card">
+        <button class="bookmark">bookmark</button>
+        <section class="question">
+          <h2>What's the question?</h2>
+        </section>
+        <button class="show__answer">show Answer</button>
+      </div>
     </main>
   </body>
 </html>
