--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
           <h2>What's the question?</h2>
         </section>
         <button class="show__answer">show Answer</button>
+        <section class="answer">
+          <h3>answer</h3>
+        </section>
       </div>
       <div class="question__card">
         <button class="bookmark">bookmark</button>
@@ -24,6 +27,9 @@
           <h2>What's the question?</h2>
         </section>
         <button class="show__answer">show Answer</button>
+        <section class="answer">
+          <h3>answer</h3>
+        </section>
       </div>
       <div class="question__card">
         <button class="bookmark">bookmark</button>
@@ -31,13 +37,9 @@
           <h2>What's the question?</h2>
         </section>
         <button class="show__answer">show Answer</button>
-      </div>
-      <div class="question__card">
-        <button class="bookmark">bookmark</button>
-        <section class="question">
-          <h2>What's the question?</h2>
+        <section class="answer">
+          <h3>answer</h3>
         </section>
-        <button class="show__answer">show Answer</button>
       </div>
     </main>
   </body>
