--- a/index.html
+++ b/index.html
@@ -12,31 +12,49 @@
     </header>
     <main>
       <div class="question__card">
-        <button class="bookmark">bookmark</button>
+        <img
+          class="bookmark"
+          src="./assets/icons8-lesezeichen-50.png"
+          alt="A bookmark icon"
+        />
         <section class="question">
           <h2>What's the question?</h2>
         </section>
-        <button class="show__answer">show Answer</button>
+        <button aria-label="Show answer" class="show__answer">
+          show Answer
+        </button>
         <section class="answer">
           <h3>answer</h3>
         </section>
       </div>
       <div class="question__card">
-        <button class="bookmark">bookmark</button>
+        <img
+          class="bookmark"
+          src="./assets/icons8-lesezeichen-50.png"
+          alt="A bookmark icon"
+        />
         <section class="question">
           <h2>What's the question?</h2>
         </section>
-        <button class="show__answer">show Answer</button>
+        <button aria-label="Show answer" class="show__answer">
+          show Answer
+        </button>
         <section class="answer">
           <h3>answer</h3>
         </section>
       </div>
       <div class="question__card">
-        <button class="bookmark">bookmark</button>
+        <img
+          class="bookmark"
+          src="./assets/icons8-lesezeichen-50.png"
+          alt="A bookmark icon"
+        />
         <section class="question">
           <h2>What's the question?</h2>
         </section>
-        <button class="show__answer">show Answer</button>
+        <button aria-label="Show answer" class="show__answer">
+          show Answer
+        </button>
         <section class="answer">
           <h3>answer</h3>
         </section>
