--- a/index.html
+++ b/index.html
@@ -60,5 +60,18 @@
         </section>
       </div>
     </main>
+    <footer>
+      <nav class="nav">
+        <ul>
+          <a href="#home">Home</a>
+        </ul>
+        <ul>
+          <a href="#bookmarks">Bookmarks</a>
+        </ul>
+        <ul>
+          <a href="#profile">Profile</a>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
