Accessability update and add footer icons

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <main>
       <div class="question__card">
         <img
-          class="bookmark"
-          src="./assets/icons8-lesezeichen-50.png"
+          class="bookmark__icon"
+          src="./assets/bookmark-trans.png"
           alt="A bookmark icon"
         />
         <section class="question">
@@ -29,8 +29,8 @@
       </div>
       <div class="question__card">
         <img
-          class="bookmark"
-          src="./assets/icons8-lesezeichen-50.png"
+          class="bookmark__icon"
+          src="./assets/bookmark-trans.png"
           alt="A bookmark icon"
         />
         <section class="question">
@@ -45,9 +45,9 @@
       </div>
       <div class="question__card">
         <img
-          class="bookmark"
-          src="./assets/icons8-lesezeichen-50.png"
-          alt="A bookmark icon"
+          class="bookmark__icon"
+          src="./assets/bookmark-trans.png"
+          alt="bookmark icon"
         />
         <section class="question">
           <h2>What's the question?</h2>
@@ -63,13 +63,31 @@
     <footer>
       <nav class="nav">
         <ul>
-          <a href="#home">Home</a>
+          <a href="#home" alt="go to home">
+            <img
+              class="home__icon"
+              src="./assets/home-white-filled.png"
+              alt="home icon"
+            />
+          </a>
         </ul>
         <ul>
-          <a href="#bookmarks">Bookmarks</a>
+          <a href="#bookmarks" alt="go to bookmarks">
+            <img
+              class="bookmark__icon"
+              src="./assets/bookmark-black-filled.png"
+              alt="bookmark icon"
+            />
+          </a>
         </ul>
         <ul>
-          <a href="#profile">Profile</a>
+          <a href="#profile" alt="got to profile">
+            <img
+              class="profile__icon"
+              src="./assets/profile-black-filled.png"
+              alt="profile icon"
+            />
+          </a>
         </ul>
       </nav>
     </footer>
