changed element positions

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <section class="question">
           <h2>What's the question?</h2>
         </section>
-        <button aria-label="Show answer" class="show__answer">
-          show Answer
+        <button aria-label="show answer" class="show__answer">
+          show answer
         </button>
         <section class="answer">
           <h3>answer</h3>
@@ -36,7 +36,7 @@
         <section class="question">
           <h2>What's the question?</h2>
         </section>
-        <button aria-label="Show answer" class="show__answer">
+        <button aria-label="show answer" class="show__answer">
           show Answer
         </button>
         <section class="answer">
@@ -52,7 +52,7 @@
         <section class="question">
           <h2>What's the question?</h2>
         </section>
-        <button aria-label="Show answer" class="show__answer">
+        <button aria-label="show answer" class="show__answer">
           show Answer
         </button>
         <section class="answer">
